	- merge PR #717 (by marcoschum)
		* Fix typo in turnserver.conf
	- merge PR #704 (by hills)
		* Packaging scripts can miss out on these errors (exit code)
	- merge PR #679 (by rubo77)
		* Readme.turnserver: how to run server as a daemon
	- merge PR #739 (by hills)
		* SSL reload has hidden bugs which cause crashes
	- Fix regression in PR #739
	- Try to mitigate amplification attatck 
		* Add option --no-rfc5780
		  to force disable RFC8750
		* Add new option --no-stun-backward-compatibility
		  Disable handling old STUN Binding requests and disable MAPPED-ADDRESS attribute in binding response (use only the XOR-MAPPED-ADDRESS).

10/01/2021 Oleg Moskalenko <mom040267@gmail.com> Mihály Mészáros <misi@majd.eu>
Version 4.5.2 'dan Eider':
	- fix null pointer dereference in case of out of memory. (thanks to Thomas Moeller for the report)
	- merge PR #517 (by wolmi)
		* add prometheus metrics
	- merge PR #637 (by David Florness)
	    * Delete trailing whitespace in example configuration files
	- merge PR #631 (by Debabrata Deka)
	    * Add architecture ppc64le to travis build
	- merge PR #627 (by Samuel)
		* Fix misleading option in doc (prometheus)
	- merge PR #643 (by tupelo-schneck)
		* Allow RFC6062 TCP relay data to look like TLS
	- merge PR #655 (by plinss)
		* Add support for proxy protocol V1 
	- merge PR #618 (by Paul Wayper)
		* Print full date and time in logs
		* Add new options: "new-log-timestamp" and "new-log-timestamp-format"
	- merge PR #599 (by Cédric Krier)
		* Do not use FIPS and remove hardcode OPENSSL_VERSION_NUMBER with LibreSSL
	- update Docker mongoDB and fix with workaround the missing systemctl
	- merge PR #660 (by Camden Narzt)
		* fix compilation on macOS Big Sur
	- merge PR #546 (by jelmd)
		* Add ACME redirect url
	- merge PR #551 (by jelmd)
		* support of --acme-redirect <URL>
	- merge PR #672 further acme fixes (by jemld)
		* fix acme security, redundancy, consistency