@@ -781,3 +781,9 @@ no-rfc5780
 #
 no-stun-backward-compatibility
 
+# Only send RESPONSE-ORIGIN attribute in binding response if RFC5780 is enabled.
+#
+# Strongly encouraged to use this option to decrease gain factor in STUN
+# binding responses.
+#
+response-origin-only-with-rfc5780
