@@ -340,6 +340,7 @@ typedef struct _turn_params_ {
 
   vint log_binding;
   vint no_stun_backward_compatibility;
+  vint response_origin_only_with_rfc5780;
 } turn_params_t;
 
 extern turn_params_t turn_params;
